--- a/main/templates/main/reports.html
+++ b/main/templates/main/reports.html
@@ -30,6 +30,30 @@
             </div>
         </div>
     </div>
+    <div class="col-lg-3 col-sm-6 mb-lg-0 mb-4">
+        <div class="card">
+            <div class="card-body p-3">
+                <div class="row">
+                    <div class="col-8">
+                        <div class="numbers">
+                          <a href="{% url 'analysts-report' %}" style="text-decoration: none;">
+                                <p class="text-sm mb-0 text-capitalize font-weight-bold">المحللين المالين</p>
+                            <h5 class="font-weight-bolder mb-0">
+                                إظهار
+                            </h5>
+                          </a>
+                        </div>
+                    </div>
+                    <div class="col-4 text-start">
+                        <div class="icon icon-shape bg-maal shadow text-center border-radius-md">
+                            <i class="fas fa-user-edit text-lg opacity-10" aria-hidden="true"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
 
 
