--- a/office/templates/office/rates-list.html
+++ b/office/templates/office/rates-list.html
@@ -13,13 +13,38 @@
             </div>
             <div class="card-body px-0 pt-0 pb-2">
                 <div class="table-responsive p-0">
-                    {% if rates.count < 0 %}
+                    {% if rates.count.as_integer_ratio < 0 %}
 
                         <p>لا توجد بيانات</p>
                     {% else %}
-                        <div class="ms-auto text-end">
-                            <a class="btn btn-link bg-maal text-dark px-3 mb-0" href="{% url 'rate-add' %}"><i class="fas fa-plus text-lg text-dark me-2" aria-hidden="true"></i>إضافة</a>
+                        <div class="row">
+    <div class="col-lg-3 col-sm-6 mb-lg-0 mb-4">
+        <div class="card">
+            <div class="card-body p-3">
+                <div class="row">
+                    <div class="col-6">
+                        <div class="numbers">
+<a style="cursor: pointer;text-decoration: none" href="{% url 'rate-add' %}">
+                                <p class="text-sm mb-0 text-capitalize font-weight-bold">إضافة تقييم</p>
+
+</a>
                         </div>
+                    </div>
+                    <div class="col-4 text-start">
+                        <div class="icon icon-shape bg-maal shadow text-center border-radius-md">
+                           <a href="{% url 'rate-add' %}" style="cursor: pointer; text-decoration: none">
+                                <i class="fas fa-plus text-lg opacity-10" aria-hidden="true"></i>
+                           </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</div>
+
+
                         <table class="table align-items-center mb-0">
                             <thead>
                                 <tr>
