--- a/office/templates/office/update-rate.html
+++ b/office/templates/office/update-rate.html
@@ -7,9 +7,9 @@
 {% block body %}
 <div class="col-12 mt-4">
     <div class="card mb-4">
-        <div class="card-header pb-0 p-3">
-            <h6 class="mb-1 text-bolder">تعديل</h6>
-        </div>
+              <div class="card-header pb-0 p-3">
+                <h6 class="mb-1 text-bolder">تعديل </h6>
+            </div>
         <div class="card-body p-3">
             <div class="row">
                 <div class="col-xl-10 col-md-10 mb-xl-0 mb-2">
@@ -23,7 +23,18 @@
                                             الشركة
                                             المدرجة
                                         </label>
-                                        <input value="{{ rate.CompanyEntered }}"  name="CompanyEntered" id="CompanyEntered" type="text" class="form-control text-black-50" asp-for="CompanyEntered" />
+
+<select name="CompanyEntered" id="CompanyEntered" class="form-control text-black-50" >
+  {% for company in companies %}
+    {% if rate.CompanyEntered.pk == company.pk %}
+        <option selected="selected" value="{{ company.pk }}">{{ company.name }}</option>
+    {% else %}
+          <option value="{{ company.pk }}">{{ company.name }}</option>
+
+    {% endif %}
+
+    {% endfor  %}
+</select>
                                     </div>
                                 </div>
                                 <div class="form-group row ">
@@ -31,7 +42,17 @@
                                         <label for="ResearchCompany">
                                             شركة الأبحاث
                                         </label>
-                                        <input value="{{ rate.ResearchCompany }}"  type="text" id="ResearchCompany" name="ResearchCompany" class="form-control text-black-50" asp-for="ResearchCompany" />
+<select name="ResearchCompany" id="ResearchCompany" class="form-control text-black-50" >
+  {% for company in companies %}
+    {% if rate.CompanyEntered.pk == company.pk %}
+        <option selected="selected" value="{{ company.pk }}">{{ company.name }}</option>
+    {% else %}
+          <option value="{{ company.pk }}">{{ company.name }}</option>
+
+    {% endif %}
+
+    {% endfor  %}
+</select>
                                     </div>
                                 </div>
                                 <div class="form-group row ">
@@ -39,7 +60,17 @@
                                         <label for="AnalayticName">
                                             إسم المحلل
                                         </label>
-                                        <input value="{{ rate.AnalayticName }}"  id="AnalayticName" name="AnalayticName" type="text" class="form-control text-black-50" asp-for="AnalayticName" />
+<select name="AnalayticName" id="AnalayticName" class="form-control text-black-50" >
+  {% for analyst in analysts %}
+    {% if rate.AnalayticName.pk == analyst.pk %}
+        <option selected="selected" value="{{ analyst.pk }}">{{ analyst.name }}</option>
+    {% else %}
+          <option value="{{ analyst.pk }}">{{ analyst.name }}</option>
+
+    {% endif %}
+
+    {% endfor  %}
+</select>
                                     </div>
                                 </div>
                                 <div class="form-group row ">
