--- a/static/css/soft-ui-dashboard.css
+++ b/static/css/soft-ui-dashboard.css
@@ -4,6 +4,11 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+.header {
+    width: 100%;
+    height: 24vh;
+    background-color: transparent;
+}
 :root {
     --bs-blue: #63B3ED;
     --bs-indigo: #596CFF;
