--- a/templates/header.html
+++ b/templates/header.html
@@ -19,6 +19,24 @@
                 </a>
             </li>
 
+                        <li class="nav-item">
+                <a class="nav-link " href="{% url 'analyst-list' %}">
+                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
+                        <i class="fas fa-user-edit text-lg mal-color"></i>
+                    </div>
+                    <span class="nav-link-text me-1">المحللين المالين</span>
+                </a>
+            </li>
+
+                        <li class="nav-item">
+                <a class="nav-link " href="{% url 'rates-list' %}">
+                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
+                        <i class="fas fa-building text-lg mal-color"></i>
+                    </div>
+                    <span class="nav-link-text me-1">شركات الأبحاث</span>
+                </a>
+            </li>
+
             <li class="nav-item">
                 <a class="nav-link " href="{% url 'reports-page' %}">
                     <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
@@ -28,7 +46,27 @@
                 </a>
             </li>
 
-
+{% if request.user.user_type == 1 %}
+            <li class="nav-item mt-3">
+          <h6 class="ps-4 ms-2 text-uppercase text-xs font-weight-bolder opacity-6">المحررين</h6>
+        </li>
+            <li class="nav-item">
+                <a class="nav-link " href="{% url 'register-admin' %}">
+                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
+                        <i class="fas fa-id-card-alt text-lg mal-color"></i>
+                    </div>
+                    <span class="nav-link-text me-1">إضافة أدمن</span>
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link " href="{% url 'register-employee' %}">
+                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
+                        <i class="fas fa-address-card text-lg mal-color"></i>
+                    </div>
+                    <span class="nav-link-text me-1">إضافة محرر</span>
+                </a>
+            </li>
+            {% endif %}
 
         </ul>
 
