--- a/templates/loginlayout.html
+++ b/templates/loginlayout.html
@@ -27,7 +27,7 @@
                 <!-- Navbar -->
                 <nav class="navbar navbar-expand-lg blur blur-rounded top-0 z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
                     <div class="container-fluid">
-                        <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="{% url 'home-page' %}">
+                        <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="{% url 'user-page' %}">
                             <img src="{% static 'images/short_logo.png' %}" class="logo_login" />
                         </a>
                         <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,12 +51,7 @@
                                         الملف الشخصى
                                     </a>
                                 </li>
-                                <li class="nav-item">
-                                    <a class="nav-link me-2" href="{% url 'register-employee' %}">
-                                        <i class="fas fa-user-circle opacity-6 text-dark me-1" aria-hidden="true"></i>
-                                        إنشاء حساب
-                                    </a>
-                                </li>
+
                                 <li class="nav-item">
                                     <a class="nav-link me-2" href="{% url 'login' %}">
                                         <i class="fas fa-key opacity-6 text-dark me-1" aria-hidden="true"></i>
