--- a/templates/main.html
+++ b/templates/main.html
@@ -31,56 +31,7 @@
         </div>
 
     </main>
-    <div class="fixed-plugin">
-        <a class="fixed-plugin-button text-dark position-fixed px-3 py-2">
-            <i class="fas fa-bars py-2"></i>
-        </a>
-        <div class="card shadow-lg ">
-            <div class="card-header pb-0 pt-3 ">
-                <div class="float-end">
-                    <h5 class="mt-3 mb-0">القائمة</h5>
-                    <p>صحفية مال الأقتصادية</p>
-                </div>
-                <div class="float-start mt-4">
-                    <button class="btn btn-link text-dark p-0 fixed-plugin-close-button">
-                        <i class="fas fa-window-close py-2"></i>
-                    </button>
-                </div>
-                <!-- End Toggle Button -->
-            </div>
-            <hr class="horizontal dark my-1">
-            <div class="card-body pt-sm-3 pt-0">
-                <!-- Sidebar Backgrounds -->
-
-                <div class="d-flex flex-column w-100">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link " {% url 'rates-list' %}>
-                                <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
-                                    <i class="far fa-id-card text-lg mal-color"></i>
-                                </div>
-                                <span class="nav-link-text me-1">التقييم البحثى</span>
-                            </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link " href="{% url 'reports-page' %}">
-                                <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
-                                    <i class="fas fa-file-invoice text-lg mal-color"></i>
-                                </div>
-                                <span class="nav-link-text me-1">الفواتير</span>
-                            </a>
-                        </li>
-
-
-
-                    </ul>
-
-                </div>
-
-                <hr class="horizontal dark my-sm-4">
-            </div>
-        </div>
-    </div>
+  {% include 'mobileMenu.html' %}
     <!--   Core JS Files   -->
     <script src="{% static 'js/core/popper.min.js' %}"></script>
     <script src="{% static 'js/core/bootstrap.min.js' %}"></script>
