--- a/main/templates/main/user-home.html
+++ b/main/templates/main/user-home.html
@@ -1,14 +1,14 @@
 {% extends 'userlayout.html' %}
 {% load  static %}
-{% block title %} صحفية مال الأقتادية {% endblock title %}
+{% block title %} صحفية مال الأقتصادية {% endblock title %}
 
 {% block body %}
  <div class="border-radius-xl m position-relative" style="background-image: url('../../../static/images/home-back.jpg') ; background-size: cover;">
     <main class="main-content border-radius-sm">
-      <div class="section min-vh-85 position-relative transform-scale-0 transform-scale-md-7">
+      <div class="section min-vh-85 position-relative transform-scale-0 transform-scale-md-7 ">
         <div class="container">
-          <div class="row pt-10">
-            <div class="col-lg-1 col-md-1 pt-5 pt-lg-0 ms-lg-5 text-center">
+          <div class="row pt-lg-9">
+            <div class="col-lg-1 col-md-1 pt-10  pt-lg-10 ms-lg-2 text-center">
               <a href="javascript:;" class="avatar avatar-md border-0" data-bs-toggle="tooltip" data-bs-placement="left" title="My Profile">
                 <img class="border-radius-lg" alt="Image placeholder" src="{% static 'images/short_logo.png' %}">
               </a>
@@ -25,14 +25,14 @@
             <div class="col-lg-8 col-md-11">
               <div class="d-flex">
                 <div class="me-auto">
-                  <h1 class="display-1 font-weight-bold mt-n4 mb-0">28°C</h1>
-                  <h6 class="text-uppercase mb-0 ms-1">Cloudy</h6>
+                  <h1 class="display-1 text-white font-weight-bold mt-n4 mb-0">28°C</h1>
+                  <h6 class="text-uppercase text-white mb-0 ms-1">Cloudy</h6>
                 </div>
                 <div class="ms-auto">
                   <img class="w-50 float-end mt-lg-n4" src="{% static 'images/curved-images/icon-sun-cloud.png' %}" alt="image sun">
                 </div>
               </div>
-              <div class="row mt-4">
+              <div class="row mt-2">
                 <div class="col-lg-4 col-md-4">
                   <div class="card move-on-hover overflow-hidden">
                     <div class="card-body">
