--- a/templates/mobileMenu.html
+++ b/templates/mobileMenu.html
@@ -40,7 +40,7 @@
             </li>
 
                         <li class="nav-item">
-                <a class="nav-link " href="{% url 'rates-list' %}">
+                <a class="nav-link " href="{% url 'company-list' %}">
                     <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
                         <i class="fas fa-building text-lg mal-color"></i>
                     </div>
