--- a/static/css/soft-ui-dashboard.css
+++ b/static/css/soft-ui-dashboard.css
@@ -6,7 +6,6 @@
  */
 .header {
     width: 100%;
-    height: 24vh;
     background-color: transparent;
 }
 :root {
@@ -19843,8 +19842,12 @@ fieldset:disabled .btn {
   transition: bottom 0.35s ease;
 }
 .logo_login {
-    height:auto ;
+    height:auto;
     width:3rem;
+}
+.logo_user {
+    height:auto;
+    width:6rem;
 }
 .page-header {
     direction:ltr;
