--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -10,17 +10,17 @@
         </div>
         <ul class="navbar-nav me-auto ms-0 justify-content-end">
 
-              {% if request.user.first_name is None  %}
+              {% if request.user.first_name  %}
  <li class="nav-item d-flex align-items-center">
-                        <a href="{% url 'login' %}" class="nav-link text-body font-weight-bold px-0">
-                            <i class="fa fa-user me-sm-1" aria-hidden="true"></i>
-                            <span class="d-sm-inline d-none">تسجيل دخول</span>
+                        <a href="{% url 'logout' %}" class="nav-link text-body font-weight-bold px-0">
+                            <i class="fa fa-power-off me-sm-1" aria-hidden="true"></i>
+                            <span class="d-sm-inline d-none">تسجيل خروج</span>
                         </a>
                     </li>
                     <li class="nav-item d-flex align-items-center">
-                        <a href="{% url 'register-employee' %}" class="nav-link text-body font-weight-bold px-0">
-                            <i class="fa fa-bell me-sm-1" aria-hidden="true"></i>
-                            <span class="d-sm-inline d-none">إنشاء حساب</span>
+                        <a href="" class="nav-link text-body font-weight-bold px-0">
+                            <i class="fa fa-user me-sm-1" aria-hidden="true"></i>
+                            <span class="d-sm-inline d-none">{{ request.user.first_name }} {{ request.user.last_name }}</span>
                         </a>
                     </li>
         {% else %}
