--- a/office/templates/office/add-category.html
+++ b/office/templates/office/add-category.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-شركات الأبحاث
+    القطاعات
 {% endblock %}
 
 {% block body %}
@@ -21,22 +21,10 @@
                                 <div class="form-group row ">
                                     <div class="col-10 d-flex flex-column">
                                         <label for="name">
-                                            إسم الشركة
+                                            إسم القطاع
                                         </label>
                                         <input id="name" name="name" type="text" class="form-control text-black-50"  />
 
-                                    </div>
-                                </div>
-                                <div class="form-group row ">
-                                    <div class="col-10 d-flex flex-column">
-                                        <label for="category">
-                                             القطاع
-                                        </label>
-<select name="category" id="category" class="form-control text-black-50" >
-  {% for category in categories %}
-          <option value="{{ category.pk }}">{{ category.name }}</option>
-    {% endfor  %}
-</select>
                                     </div>
                                 </div>
 
