--- a/office/templates/office/edit-category.html
+++ b/office/templates/office/edit-category.html
@@ -2,14 +2,14 @@
 {% load static %}
 
 {% block title %}
-شركات الأبحاث
+القطاعات
 {% endblock %}
 
 {% block body %}
 <div class="col-12 mt-4">
     <div class="card mb-4">
         <div class="card-header pb-0 p-3">
-            <h6 class="mb-1 text-bolder">!ضافة</h6>
+            <h6 class="mb-1 text-bolder">تعديل</h6>
         </div>
         <div class="card-body p-3">
             <div class="row">
@@ -21,28 +21,16 @@
                                 <div class="form-group row ">
                                     <div class="col-10 d-flex flex-column">
                                         <label for="name">
-                                            إسم الشركة
+                                            إسم القطاع
                                         </label>
-                                        <input id="name" name="name" type="text" class="form-control text-black-50"  />
+                                        <input id="name" value="{{ category.name }}" name="name" type="text" class="form-control text-black-50"  />
 
-                                    </div>
-                                </div>
-                                <div class="form-group row ">
-                                    <div class="col-10 d-flex flex-column">
-                                        <label for="category">
-                                             القطاع
-                                        </label>
-<select name="category" id="category" class="form-control text-black-50" >
-  {% for category in categories %}
-          <option value="{{ category.pk }}">{{ category.name }}</option>
-    {% endfor  %}
-</select>
                                     </div>
                                 </div>
 
                                 <div class="form-group row ">
                                     <div class="col-10 d-flex flex-column justify-content-center">
-                                            <input type="submit" class="btn btn-primary text-black-50 bg-maal" value="إضافة"/>
+                                            <input type="submit" class="btn btn-primary text-black-50 bg-maal" value="تعديل"/>
 
 
                                     </div>
