--- a/office/templates/office/edit-company.html
+++ b/office/templates/office/edit-company.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-شركات الأبحاث
+
 {% endblock %}
 
 {% block body %}
@@ -27,7 +27,26 @@
 
                                     </div>
                                 </div>
-                                
+                                                                <div class="form-group row ">
+                                    <div class="col-10 d-flex flex-column">
+                                        <label for="category">
+                                            القطاع
+                                        </label>
+
+<select name="category" id="category" class="form-control text-black-50" >
+  {% for category_ in categories %}
+    {% if category.pk == category_.pk %}
+        <option selected="selected" value="{{ category_.pk }}">{{ category_.name }}</option>
+    {% else %}
+          <option value="{{ category_.pk }}">{{ category_.name }}</option>
+
+    {% endif %}
+
+    {% endfor  %}
+</select>
+                                    </div>
+                                </div>
+
                                 <div class="form-group row ">
                                     <div class="col-10 d-flex flex-column justify-content-center">
                                             <input type="submit" class="btn btn-primary text-black-50 bg-maal" value="تعديل"/>
