--- a/templates/loginlayout.html
+++ b/templates/loginlayout.html
@@ -47,7 +47,7 @@
                                     </a>
                                 </li>
                                                                         <li class="nav-item">
-                                    <a class="nav-link me-2" href="../pages/profile.html">
+                                    <a class="nav-link me-2" href="{% url 'profile' %}">
                                         <i class="fa fa-user opacity-6 text-dark me-1" aria-hidden="true"></i>
                                         الملف الشخصى
                                     </a>
