--- a/templates/mobileMenu.html
+++ b/templates/mobileMenu.html
@@ -47,6 +47,14 @@
                     <span class="nav-link-text me-1">شركات الأبحاث</span>
                 </a>
             </li>
+                        <li class="nav-item">
+                <a class="nav-link " href="{% url 'category-list' %}">
+                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
+                        <i class="fas fa-ethernet text-lg mal-color"></i>
+                    </div>
+                    <span class="nav-link-text me-1">القطاعات</span>
+                </a>
+            </li>
 
             <li class="nav-item">
                 <a class="nav-link " href="{% url 'reports-page' %}">
