--- a/main/templates/main/user-home.html
+++ b/main/templates/main/user-home.html
@@ -3,9 +3,9 @@
 {% block title %} صحفية مال الأقتصادية {% endblock title %}
 
 {% block body %}
- <div class="border-radius-xl m position-relative" style="background-image: url('../../../static/images/home-back.jpg') ; background-size: cover;">
+ <div class="m position-relative" style="background-image: url('../../../static/images/tadawel.jpg') ; background-size: cover;">
     <main class="main-content border-radius-sm">
-      <div class="section min-vh-85 position-relative transform-scale-0 transform-scale-md-7 ">
+      <div class="section min-vh-100 position-relative transform-scale-0 transform-scale-md-0 m-auto m-0">
         <div class="container">
           <div class="row pt-lg-9">
             <div class="col-lg-1 col-md-1 pt-10  pt-lg-10 ms-lg-2 text-center">
@@ -141,4 +141,4 @@
       </div>
     </main>
   </div>
-{% endblock body %}
+{% endblock %}
