--- a/main/templates/main/user-home.html
+++ b/main/templates/main/user-home.html
@@ -3,7 +3,7 @@
 {% block title %} صحفية مال الأقتصادية {% endblock title %}
 
 {% block body %}
- <div class="m position-relative" style="background-image: url('../../../static/images/tadawel.jpg') ; background-size: cover;">
+ <div class="m position-relative" style="background-image: url('../../../static/images/short_logo.png') ; background-size: cover;">
     <main class="main-content border-radius-sm">
       <div class="section min-vh-100 position-relative transform-scale-0 transform-scale-md-0 m-auto m-0">
         <div class="container">
@@ -25,8 +25,8 @@
             <div class="col-lg-8 col-md-11">
               <div class="d-flex">
                 <div class="me-auto">
-                  <h1 class="display-1 text-white font-weight-bold mt-n4 mb-0">28°C</h1>
-                  <h6 class="text-uppercase text-white mb-0 ms-1">Cloudy</h6>
+                  <h1 class="display-1 text-black font-weight-bold mt-n4 mb-0">28°C</h1>
+                  <h6 class="text-uppercase text-black mb-0 ms-1">Cloudy</h6>
                 </div>
                 <div class="ms-auto">
                   <img class="w-50 float-end mt-lg-n4" src="{% static 'images/curved-images/icon-sun-cloud.png' %}" alt="image sun">
