--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,24 +1,28 @@
-{% extends 'loginlayout.html' %}
+{% extends 'userlayout.html' %}
 
 {% block title %}تسجيل الدخول  {% endblock title %}
 
 
 {% block body %}
-<div class="row d-flex">
-    <div class="col-xl-4 col-lg-5 col-md-6 d-flex flex-column mx-auto">
-        <div class="card card-plain mt-8">
+         <div class="m position-relative" style="background-image: url('../../../static/images/short_logo.png') ; background-size: cover;">
+    <main class="main-content border-radius-sm">
+      <div class="section min-vh-100 position-relative transform-scale-0 transform-scale-md-0 m-auto m-0">
+        <div class="container">
+          <div class="row pt-lg-8 pt-md-6 pb-lg-5" style="margin: 0 auto;">
+              <div class="col-lg-10 col-md-10">
+                          <div class="card h-100">
             <div class="card-header">
                 <h3 class="font-weight-bolder text-black text-gradient">مرحبا بك</h3>
             </div>
             <div class="card-body">
                 <form method="post">
                     {% csrf_token %}
-                    <label asp-for="email">البريد الألكترونى</label>
+                    <label>البريد الألكترونى</label>
                     <div class="mb-3">
                         <input type="email" name="email" id="email" class="form-control" placeholder="البريد الألكترونى" aria-label="Email" aria-describedby="email-addon">
 
                     </div>
-                    <label asp-for="password">كلمة المرور</label>
+                    <label >كلمة المرور</label>
                     <div class="mb-3">
                         <input type="password" name="password" id="password"  class="form-control" placeholder="كلمة المرور" aria-label="Password" aria-describedby="password-addon">
 
@@ -32,21 +36,12 @@
                     </div>
                 </form>
             </div>
-            <div class="card-footer text-center pt-0 px-lg-2 px-1">
-                <p class="mb-4 text-sm mx-auto">
-                    ليس لديك حساب؟
-                    <a href="{% url 'register-employee' %}" class="text-info text-black-50 bg-maal font-weight-bold">إنشاء حساب</a>
-                </p>
-            </div>
         </div>
-    </div>
 
-    <div class="col-md-6">
-        <div class="oblique position-absolute top-0 h-100 d-md-block d-none me-n8">
-            <div class="oblique-image bg-cover position-absolute fixed-top ms-auto h-100 z-index-0 ms-n6 back-ryad"></div>
         </div>
-    </div>
-
-</div>
-
+          </div>
+        </div>
+      </div>
+    </main>
+     </div>
 {% endblock body %}
