--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -1,13 +1,16 @@
-{% extends 'loginlayout.html' %}
+{% extends 'userlayout.html' %}
 {% load static %}
-{% block title %}  الصفحة الشخية {% endblock title %}
+{% block title %}  الصفحة الشخصية {% endblock title %}
 
 
 {% block body %}
-
-<div class="row pt-10">
-<div class="col-lg-10 col-md-10">
-          <div class="card h-100 background_card">
+     <div class="m position-relative" style="background-image: url('../../../static/images/short_logo.png') ; background-size: cover;">
+    <main class="main-content border-radius-sm">
+      <div class="section min-vh-100 position-relative transform-scale-0 transform-scale-md-0 m-auto m-0">
+        <div class="container">
+          <div class="row pt-lg-8 pb-lg-5" style="margin: 0 auto;">
+              <div class="col-lg-10 col-md-10">
+          <div class="card h-100">
             <div class="card-header pb-0">
               <h6>صحفية مال الأقتصادية</h6>
               <p class="text-xl-center">
@@ -79,6 +82,10 @@
             </div>
           </div>
         </div>
-</div>
+          </div>
+        </div>
+      </div>
+    </main>
+     </div>
 
 {% endblock body %}
