--- a/office/templates/office/add-rate.html
+++ b/office/templates/office/add-rate.html
@@ -37,7 +37,7 @@
                                             شركة الأبحاث
                                         </label>
 <select name="ResearchCompany" id="ResearchCompany" class="form-control text-black-50">
-  {% for company in companies %}
+  {% for company in researches %}
           <option value="{{ company.pk }}">{{ company.name }}</option>
     {% endfor  %}
 </select>                                    </div>
