--- a/templates/header.html
+++ b/templates/header.html
@@ -2,7 +2,7 @@
 <aside class="sidenav navbar navbar-vertical navbar-expand-xs border-0 border-radius-xl my-3 fixed-end me-3 rotate-caret ps ps__rtl ps--active-y" id="sidenav-main">
     <div class="sidenav-header">
         <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute start-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
-        <a class="navbar-brand m-0" href="{% url 'home-page' %}" target="_blank">
+        <a class="navbar-brand m-0" href="{% url 'user-page' %}" >
             <img src="{% static 'images/short_logo.png' %}" class="navbar-brand-img h-100" alt="main_logo">
             <span class="me-1 font-weight-bold">صحيفة مال الأقتصادية</span>
         </a>
@@ -39,6 +39,14 @@
 
                         <li class="nav-item">
                 <a class="nav-link " href="{% url 'company-list' %}">
+                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
+                        <i class="fas fa-building text-lg mal-color"></i>
+                    </div>
+                    <span class="nav-link-text me-1">شركات المدرجة</span>
+                </a>
+            </li>
+                       <li class="nav-item">
+                <a class="nav-link " href="{% url 'research-list' %}">
                     <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
                         <i class="fas fa-building text-lg mal-color"></i>
                     </div>
