--- a/templates/mobileMenu.html
+++ b/templates/mobileMenu.html
@@ -38,21 +38,30 @@
                     <span class="nav-link-text me-1">المحللين المالين</span>
                 </a>
             </li>
-
-                        <li class="nav-item">
-                <a class="nav-link " href="{% url 'company-list' %}">
-                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
-                        <i class="fas fa-building text-lg mal-color"></i>
-                    </div>
-                    <span class="nav-link-text me-1">شركات الأبحاث</span>
-                </a>
-            </li>
                         <li class="nav-item">
                 <a class="nav-link " href="{% url 'category-list' %}">
                     <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
                         <i class="fas fa-ethernet text-lg mal-color"></i>
                     </div>
                     <span class="nav-link-text me-1">القطاعات</span>
+                </a>
+            </li>
+
+
+                        <li class="nav-item">
+                <a class="nav-link " href="{% url 'company-list' %}">
+                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
+                        <i class="fas fa-building text-lg mal-color"></i>
+                    </div>
+                    <span class="nav-link-text me-1">شركات المدرجة</span>
+                </a>
+            </li>
+                       <li class="nav-item">
+                <a class="nav-link " href="{% url 'research-list' %}">
+                    <div class="icon icon-shape icon-sm shadow border-radius-md bg-white text-center ms-2 d-flex align-items-center justify-content-center">
+                        <i class="fas fa-building text-lg mal-color"></i>
+                    </div>
+                    <span class="nav-link-text me-1">شركات الأبحاث</span>
                 </a>
             </li>
 
