--- a/templates/mobileMenu.html
+++ b/templates/mobileMenu.html
@@ -6,7 +6,7 @@
             <div class="card-header pb-0 pt-3 ">
                 <div class="float-end">
                     <h5 class="mt-3 mb-0">القائمة</h5>
-                    <p>صحفية مال الأقتصادية</p>
+                    <p>صحفية مال </p>
                 </div>
                 <div class="float-start mt-4">
                     <button class="btn btn-link text-dark p-0 fixed-plugin-close-button">
