--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -49,7 +49,7 @@
             <div class="col-auto my-auto">
                 <div class="h-100">
                     <h5 class="mb-1">
-                        صحفية مال الأقتصادية
+                        صحفية مال
                     </h5>
 
                 </div>
