--- a/templates/header.html
+++ b/templates/header.html
@@ -4,7 +4,7 @@
         <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute start-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
         <a class="navbar-brand m-0" href="{% url 'user-page' %}" >
             <img src="{% static 'images/short_logo.png' %}" class="navbar-brand-img h-100" alt="main_logo">
-            <span class="me-1 font-weight-bold">صحيفة مال الأقتصادية</span>
+            <span class="me-1 font-weight-bold">صحيفة مال </span>
         </a>
     </div>
     <hr class="horizontal dark mt-0">
