--- a/templates/main.html
+++ b/templates/main.html
@@ -21,7 +21,7 @@
 </head>
 <body class="g-sidenav-show rtl bg-gray-100">
    {% include 'header.html' %}
-    <main class="main-content position-relative max-height-vh-100 h-100 mt-1 border-radius-lg overflow-hidden">
+    <main class="main-content position-relative max-height-vh-auto h-auto mt-1 border-radius-lg overflow-hidden">
       {% include 'navbar.html' %}
         <div class="container-fluid py-4">
            {% block body %}
