--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -4,11 +4,11 @@
 
 
 {% block body %}
-         <div class="m position-relative" style="background-image: url('../../../static/images/logo_back.png') ; background-size: cover;">
+         <div class="m position-relative" style="background-color: #f4f4f4" >
     <main class="main-content border-radius-sm">
       <div class="section min-vh-100 position-relative transform-scale-0 transform-scale-md-0 m-auto m-0">
         <div class="container">
-          <div class="row pt-lg-8 pt-md-6 pb-lg-5" style="margin: 0 auto;">
+          <div class="row pt-lg-8 pt-8" style="margin: 0 auto;">
               <div class="col-lg-10 col-md-10">
                           <div class="card h-100">
             <div class="card-header">
