--- a/office/templates/office/company_list.html
+++ b/office/templates/office/company_list.html
@@ -45,6 +45,7 @@
 
 </div>
 
+<div class="table-responsive">
 
                         <table class="table align-items-center mb-0">
                             <thead>
@@ -81,6 +82,7 @@
 
                             </tbody>
                         </table>
+</div>
 
                   {% endif %}
                 </div>
