--- a/office/templates/office/percompany-list.html
+++ b/office/templates/office/percompany-list.html
@@ -46,6 +46,7 @@
 
 </div>
 
+<div class="table-responsive">
 
                         <table class="table align-items-center mb-0">
                             <thead>
@@ -78,7 +79,7 @@
 
                             </tbody>
                         </table>
-
+</div>
                   {% endif %}
                 </div>
             </div>
