--- a/office/templates/office/research_list.html
+++ b/office/templates/office/research_list.html
@@ -44,8 +44,7 @@
     </div>
 
 </div>
-
-
+<div class="table-responsive">
                         <table class="table align-items-center mb-0">
                             <thead>
                                 <tr>
@@ -75,7 +74,7 @@
 
                             </tbody>
                         </table>
-
+</div>
                   {% endif %}
                 </div>
             </div>
