--- a/main/templates/main/master_home.html
+++ b/main/templates/main/master_home.html
@@ -1,26 +1,90 @@
-{% extends 'masterpage.html' %}
+{% extends 'userlayout.html' %}
 {% load static %}
 {% block title %} صحيفة مال  {% endblock title %}
 
 {% block body %}
- <section class="min-vh-100 mb-8">
-    <div class="page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style="background-image: url('../../../static/images/tada.jpg');">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-5 mx-auto pt-7">
+       <div class="m position-relative" style="background-image: url('../../../static/images/tadawel.jpg') ; background-size: cover;">
+    <main class="main-content border-radius-sm">
+      <div class="section min-vh-100 position-relative transform-scale-0 transform-scale-md-0 m-auto m-0">
+        <div class="container">
+         <div class="row pt-8">
+        <div class="col-lg-4 col-sm-6 mb-lg-0 mb-4">
+     <a href="{% url 'all-user-rate' %}">
+                   <div class="card">
+            <div class="card-body p-3">
+              <div class="row">
+                <div class="col-8">
+                  <div class="numbers">
+                    <p class="text-sm mb-0 text-capitalize font-weight-bold">المحللين</p>
+                    <h5 class="font-weight-bolder mb-0">
+                      <span class="text-success text-sm font-weight-bolder">{{ analysts__count }}</span>
+                    </h5>
+                  </div>
+                </div>
+                <div class="col-4 text-start">
+                  <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+                    <i class="fas fa-user text-lg opacity-10" aria-hidden="true"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
 
+     </a>
+        </div>
+        <div class="col-lg-4 col-sm-6 mb-lg-0 mb-4">
+    <a href="{% url 'all-user-rate' %}">
+                  <div class="card">
+            <div class="card-body p-3">
+              <div class="row">
+                <div class="col-8">
+                  <div class="numbers">
+                    <p class="text-sm mb-0 text-capitalize font-weight-bold">التقييمات</p>
+                    <h5 class="font-weight-bolder mb-0">
+                      <span class="text-success text-sm font-weight-bolder">{{ rates_count }}</span>
+                    </h5>
+                  </div>
+                </div>
+                <div class="col-4 text-start">
+                  <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+                    <i class="fas fa-id-card text-lg opacity-10" aria-hidden="true"></i>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+    </a>
+        </div>
+        <div class="col-lg-4 col-sm-6 mb-lg-0 mb-4">
+          <div class="card">
+            <div class="card-body p-3">
+              <div class="row">
+                <div class="col-8">
+                  <div class="numbers">
+                    <p class="text-sm mb-0 text-capitalize font-weight-bold">الشركات</p>
+                    <h5 class="font-weight-bolder mb-0">
+                      <span class="text-danger text-sm font-weight-bolder">{{ companies_count }}</span>
+                    </h5>
+                  </div>
+                </div>
+                <div class="col-4 text-start">
+                  <div class="icon icon-shape bg-gradient-primary shadow text-center border-radius-md">
+                    <i class="fas fa-building text-lg opacity-10" aria-hidden="true"></i>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    <div class="container">
-      <div class="row mt-lg-n10 mt-md-n11 mt-n10">
-        <div class="col-xl-4 col-lg-5 col-md-7">
+          </div>
+                  <div class="row  pt-4 mx-auto">
+        <div class="col-xl-6 col-lg-6 col-md-7">
           <div class="card z-index-0 h-100">
             <div class="card-header pb-0 p-3">
               <h6 class="mb-0">المحللين</h6>
             </div>
-            <div class="card-body p-3">
+            <div class="card-body justify-content-center p-3">
               <ul class="list-group">
                {% for analyst in analysts %}
                    <li class="list-group-item border-0 d-flex align-items-center px-0 mb-2">
@@ -38,11 +102,14 @@
 
               </ul>
             </div>
+          <div class="card-footer d-flex justify-content-center">
+              <a href="{% url 'all-user-analyst' %}" class="btn btn-sm btn-round mb-0 me-1 bg-maal">المزيد</a>
+          </div>
           </div>
 
 
         </div>
-          <div class="col-xl-4 col-lg-5 col-md-7 pt-3">
+          <div class="col-xl-6 col-lg-5 col-md-7 pt-3">
               <div class="card h-100 mb-4 z-index-0">
             <div class="card-header pb-0 px-3">
               <div class="row">
@@ -55,11 +122,12 @@
                 </div>
               </div>
             </div>
-            <div class="card-body pt-4 p-3">
+            <div class="card-body justify-content-center pt-4 p-3">
               <ul class="list-group">
                   {% for rate in high_rated %}
                 <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
-                  <div class="d-flex align-items-center">
+<a href="{% url 'user-rate' rate.pk %}">
+                      <div class="d-flex align-items-center">
                     <button class="btn btn-icon-only btn-rounded btn-outline-danger mb-0 me-3 btn-sm d-flex align-items-center justify-content-center"><i class="fas fa-arrow-down" aria-hidden="true"></i></button>
                     <div class="d-flex flex-column">
                       <h6 class="mb-1 text-black-50 text-sm">{{ rate.CompanyEntered }}</h6>
@@ -68,6 +136,8 @@
 
                     </div>
                   </div>
+
+</a>
                   <div class="d-flex align-items-center text-black-50  text-sm font-weight-bold">
                     {{ rate.market_percentage |floatformat:-2  }}
                   </div>
@@ -78,11 +148,19 @@
               </ul>
 
             </div>
+                 <div class="card-footer d-flex justify-content-center">
+              <a href="{% url 'all-user-rate' %}" class="btn btn-sm btn-round mb-0 me-1 bg-maal">المزيد</a>
+          </div>
           </div>
           </div>
       </div>
-    </div>
-  </section>
 
+      </div>
+
+
+    </div>
+
+    </main>
+       </div>
 
 {% endblock body %}
