--- a/office/templates/office/catgory-list.html
+++ b/office/templates/office/catgory-list.html
@@ -44,6 +44,7 @@
     </div>
 
 </div>
+<div class="table-responsive">
 
 
                         <table class="table align-items-center mb-0">
@@ -72,7 +73,7 @@
 
                             </tbody>
                         </table>
-
+</div>
                   {% endif %}
                 </div>
             </div>
