--- a/office/templates/office/update-rate.html
+++ b/office/templates/office/update-rate.html
@@ -108,6 +108,14 @@
                                         <input value="{{ rate.MarketValue }}"  id="MarketValue" name="MarketValue" type="text" class="form-control text-black-50" asp-for="MarketValue" placeholder="بالريال السعودى" />
                                     </div>
                                 </div>
+                                <div class="form-group row ">
+                                    <div class="col-10 d-flex flex-column">
+                                        <label for="rdate">
+                                               تاريخ التوصية
+                                        </label>
+                                        <input value="{{ rate.RecommendDate }}" id="rdate" name="rdate" type="date" class="form-control text-black-50" placeholder="   تاريخ التوصية" />
+                                    </div>
+                                </div>
 
                                 <div class="form-group row ">
                                     <div class="col-10 d-flex flex-column">
